ros2/robot_ws/log/build_2021-12-14_15-55-03/rqt_example/stdout.log
-- Install configuration: ""
-- Execute custom install script
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/rqt_example/environment/pythonpath.sh
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/rqt_example/environment/pythonpath.dsv
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/lib/python3.8/site-packages/rqt_example/__init__.py
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/lib/python3.8/site-packages/rqt_example/examples.py
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/lib/python3.8/site-packages/rqt_example/examples_widget.py
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/rqt_example/plugin.xml
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/rqt_example/resource/lab.png
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/rqt_example/resource/logo.png
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/rqt_example/resource/resource.qrc
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/rqt_example/resource/rqt_example.ui
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/rqt_example/launch/turtlesim.launch.py
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/lib/rqt_example/rqt_example
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/ament_index/resource_index/package_run_dependencies/rqt_example
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/ament_index/resource_index/parent_prefix_path/rqt_example
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/rqt_example/environment/ament_prefix_path.sh
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/rqt_example/environment/ament_prefix_path.dsv
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/rqt_example/environment/path.sh
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/rqt_example/environment/path.dsv
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/rqt_example/local_setup.bash
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/rqt_example/local_setup.sh
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/rqt_example/local_setup.zsh
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/rqt_example/local_setup.dsv
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/package.dsv
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/ament_index/resource_index/packages/rqt_example
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/rqt_example/cmake/rqt_exampleConfig.cmake
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/rqt_example/cmake/rqt_exampleConfig-version.cmake
-- Up-to-date symlink: /home/choi/robot_ws/install/rqt_example/share/rqt_example/package.xml
Listing '/home/choi/robot_ws/install/rqt_example/lib/python3.8/site-packages/rqt_example'...
Compiling '/home/choi/robot_ws/install/rqt_example/lib/python3.8/site-packages/rqt_example/examples_widget.py'...
***   File "/home/choi/robot_ws/install/rqt_example/lib/python3.8/site-packages/rqt_example/examples_widget.py", line 80
    result = ['{0}'.format(self.axis),'{0}'.format(self.len]
                                                           ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '('

